# tobi

./: .gitignore  Cargo.toml  Not set  README.md  install.sh  tobirc.sh  typescript
.VSCodeCounter/2024-09-02_02-11-37/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/: autocompletions.rs  commands.rs  context.rs  ctf.rs  db.rs  help.rs  lib.rs  main.rs  settings.rs  undo.rs  util.rs
src/ctf/: challenge.rs
src/settings/: center.rs  main_menu.rs  settings_tui.rs
src/settings/settings_tui/: behaviour_menu.rs  list_selector_trait.rs  main_menu.rs  path_menu.rs  tui.rs
src/settings/settings_tui/path_menu/: explorer.rs
