[package]
name = "tobi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
color-eyre = "0.6.3"
ratatui = "0.28.1"
rusqlite = "0.32.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"

[[bin]]
name = "tobi-cli"
path = "src/main.rs"
