[package]
name = "tobi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.28.1"
home = "0.5.9"
lazy_static = "1.5.0"
rusqlite = "0.32.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
zip = "2.2.0"
fs_extra = "1.3.0"
humansize = "2.1.3"

[[bin]]
name = "tobi-cli"
path = "src/main.rs"
